here/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: here 
spec:
  selector:
    matchLabels:
      app: here 
  template:
    metadata:
      labels:
        app: here 
    spec:
      containers:
      - name: here 
        image: ghcr.io/pmh-only/here:latest
        volumeMounts:
        - mountPath: /data
          name: persistent
      volumes:
      - name: persistent
        persistentVolumeClaim:
          claimName: here-pvc
